free version of fontawesome

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -21,13 +21,13 @@
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -41,13 +41,13 @@
 							<span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -61,13 +61,13 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -81,13 +81,13 @@
 							<span class="github-card__language-icon" style="color: #2b7489;">●</span> Typescript
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -101,13 +101,13 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
@@ -121,13 +121,13 @@
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-star"></i>
+							<i class="fas fa-star"></i>
 							<span data-stars>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
 						</span>
 						<span class="github-card__meta">
-							<i class="far fa-code-branch" aria-hidden="true"></i>
+							<i class="fas fa-code-branch" aria-hidden="true"></i>
 							<span data-forks>
 								<i class="fa fa-spinner" aria-hidden="true"></i>
 							</span>
