--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -13,10 +13,10 @@
         <span class="post-excerpt">{{excerpt words="60"}}</span>
       </div>
       <div class="post-footer">
-        {{#primary_tag}} <div class="meta-item"><i class="far fa-tag"></i> <a href="{{url}}">{{name}}</a> </div> {{/primary_tag}}
+        {{#primary_tag}} <div class="meta-item"><i class="fas fa-tag"></i> <a href="{{url}}">{{name}}</a> </div> {{/primary_tag}}
         <div class="meta-item date"> <i class="fal fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span> </div>
-        {{#primary_author}} <div class="meta-item author"> <a href="{{url}}"><i class="far fa-user"></i> <span>{{name}}</span></a> </div> {{/primary_author}}
-        <div class="meta-item readtime"> <i class="far fa-eye"></i> <span>{{reading_time}}</span> </div>
+        {{#primary_author}} <div class="meta-item author"> <a href="{{url}}"><i class="fas fa-user"></i> <span>{{name}}</span></a> </div> {{/primary_author}}
+        <div class="meta-item readtime"> <i class="fas fa-eye"></i> <span>{{reading_time}}</span> </div>
       </div>
     </div>
   </div>
