--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -16,12 +16,12 @@
     </div>
     <div class="meta">
       {{#primary_tag}}
-        <a href="{{url}}" class="tags meta-item {{slug}}"><i class="far fa-tag"></i> {{name}}</a>
+        <a href="{{url}}" class="tags meta-item {{slug}}"><i class="fas fa-tag"></i> {{name}}</a>
       {{/primary_tag}}
       {{#primary_author}}
         {{primary_author.bio}}
         <a href="{{url}}" class="author meta-item">
-          <i class="far fa-user-edit" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i>
+          <i class="fas fa-user-edit" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i>
           <span>{{slug}}</span>
         </a>
       {{/primary_author}}
