--- a/post.hbs
+++ b/post.hbs
@@ -10,7 +10,7 @@
 			<div class="post-header">
 				<div class="post-meta">
 					{{#primary_tag}} <span class="primary-tag meta-item"><i class="far d fa-tag"></i> {{name}}</span> {{/primary_tag}}
-					{{#primary_author}} <a href="{{url}}" class="meta-item author desktop"><i class="far fa-user-edit"></i> {{name}}</a> {{/primary_author}}
+					{{#primary_author}} <a href="{{url}}" class="meta-item author desktop"><i class="fas fa-user-edit"></i> {{name}}</a> {{/primary_author}}
 					<span class="date meta-item"><i class="far d fa-calendar"></i> {{date format="MMM Do"}}</span>
 					<span class="readtime meta-item"><i class="far d fa-eye"></i> {{reading_time}}</span>
 				</div>
