free version of fontawesome

--- a/partials/widgets/widget-social.hbs
+++ b/partials/widgets/widget-social.hbs
@@ -6,7 +6,7 @@
 		<a class="btn facebook" href="https://www.facebook.com/{{@site.facebook}}/"><i class="fab fa-facebook-f"></i></a>
 		<a class="btn twitter" href="https://twitter.com/{{@site.twitter}}"><i class="fab fa-twitter"></i></a>
 		<a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
-		<a class="btn rss" href="{{@site.url}}/rss/"><i class="far d fa-rss"></i></a>
+		<a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
 <!-- End Widget -->
