--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -14,7 +14,7 @@
     <a class="btn twitter" href="https://twitter.com/{{@site.twitter}}/"><i class="fab fa-twitter"></i></a>
     <a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
     <a class="btn github" href="https://github.com/hackersandslackers/"><i class="fab fa-github"></i></a>
-    <a class="btn rss" href="{{@site.url}}/rss/"><i class="far d fa-rss"></i></a>
+    <a class="btn rss" href="{{@site.url}}/rss/"><i class="fab fa-rss"></i></a>
   </div>
   	<p class="copyright">{{t "Copyright"}}</p>
 </div>
