--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -14,9 +14,9 @@
       </div>
       <div class="post-footer">
         {{#primary_tag}} <div class="meta-item"><i class="fas fa-tag"></i> <a href="{{url}}">{{name}}</a> </div> {{/primary_tag}}
-        <div class="meta-item date"> <i class="fal fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span> </div>
+        {{#if reading_time}}<div class="meta-item date"> <i class="fas fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span> </div>{{/if}}
         {{#primary_author}} <div class="meta-item author"> <a href="{{url}}"><i class="fas fa-user"></i> <span>{{name}}</span></a> </div> {{/primary_author}}
-        <div class="meta-item readtime"> <i class="fas fa-eye"></i> <span>{{reading_time}}</span> </div>
+        {{#if reading_time}}<div class="meta-item readtime"> <i class="fas fa-eye"></i> <span>{{reading_time}}</span> </div>{{/if}}
       </div>
     </div>
   </div>
