--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -44,8 +44,8 @@
 
 // Font Styles
 @body-font: 'proxima-nova', sans-serif;
-@header-font: 'HarmoniaSansPro-Bold', sans-serif;
-@sub-header-font: 'HarmoniaSansPro-Regular', sans-serif;
+@header-font: 'canada-type-gibson', sans-serif;
+@sub-header-font: 'canada-type-gibson', sans-serif;
 
 // Animations
 @transition: all 0.2s ease-out;
