--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -47,5 +47,7 @@
 @header-font: 'canada-type-gibson', sans-serif;
 @sub-header-font: 'canada-type-gibson', sans-serif;
 
+@box-shadow: 0 1px 4px rgba(39,44,49,.15);
+
 // Animations
 @transition: all 0.2s ease-out;
