--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -8,7 +8,7 @@
 		padding: 25px;
 		background: #fff 50%;
 		background-size: cover;
-		box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);
+		box-shadow: @box-shadow;
 		transition: all 0.5s ease;
 
 		&:first-of-type {
