--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -13,7 +13,7 @@
     <a class="btn facebook" href="https://facebook.com/{{@site.facebook}}/"><i class="fab fa-facebook-f"></i></a>
     <a class="btn twitter" href="https://twitter.com/{{@site.twitter}}/"><i class="fab fa-twitter"></i></a>
     <a class="btn github" href="https://github.com/hackersandslackers/"><i class="fab fa-github"></i></a>
-    <a class="btn rss" href="{{@site.url}}/rss/"><i class="fab fa-rss"></i></a>
+    <a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
   </div>
   	<p class="copyright">{{t "Copyright"}}</p>
 </div>
