--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -25,16 +25,19 @@ nav {
 			max-width: 86%;
 		}
 
-		.nav-logo {
+		.logo {
 			transition: all 0.2s ease-out;
 			margin-right: 30px;
-				height: 40px;
-				width: 40px;
-				@media(max-width: 600px) {
-					height: 35px;
-					width: 35px;
-				}
+			height: 40px;
+			width: 40px;
+			@media(max-width: 600px) {
+				height: 35px;
+				width: 35px;
+			}
 
+			img {
+				object-fit: cover;
+			}
 
 			&:hover {
 				opacity: 0.7;
@@ -102,24 +105,22 @@ nav {
 				transition: @transition;
 				position: relative;
 				height: -webkit-fill-available;
-
 				@media(max-width: @tablet-breakpoint) {
-					  margin: 0 0 0 30px;
+					margin: 0 0 0 30px;
 				}
 
 				.mobile-link {
 					display: none !important;
-
 					@media(max-width: @mobile-breakpoint) {
-						  display: flex !important;
+						display: flex !important;
 					}
 				}
 
-				button,
-				.mobile-link {
+				.mobile-link,
+				button {
 					height: -webkit-fill-available;
-			    display: flex;
-			    align-items: center;
+					display: flex;
+					align-items: center;
 					padding: 0;
 					font-family: 'proxima-nova', sans-serif !important;
 					font-size: 1em;
@@ -210,7 +211,7 @@ nav {
 		}
 
 		.dropdown {
-			    margin: 0 20px 0 0;
+			margin: 0 20px 0 0;
 
 			&:last-of-type {
 				margin-right: 0;
