--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -8,7 +8,7 @@
 @import './posts/linkpreview.less';
 @import './posts/postfooter.less';
 @import './posts/table.less';
-@import './posts/galleries.less';
+@import './posts/kg.less';
 @import './posts/article-preview.less';
 @import './posts/serieswidget.less';
 @import './posts/previewplaceholder.less';
