--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -7,6 +7,7 @@
   justify-content: space-between;
   display: flex;
   max-width: 100%;
+  box-shadow: @box-shadow;
   @media(max-width: @tablet-breakpoint) {
     margin: 20px 0;
   }
