--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -12,6 +12,7 @@
       background: white;
       overflow: hidden;
       transition: all .3s ease-out;
+      box-shadow: @box-shadow;
 
       @media(max-width: @mobile-breakpoint) {
         display: flex;
