--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -1,7 +1,6 @@
 // Colors
-@theme-color: #5eb9d7;            // theme color
-@secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
+@theme-color: #6baaf2;
 @button-color: #5eb9d7;
 @button-hover: #30b1a7;
 @button-shadow: #4497b8;
@@ -15,9 +14,15 @@
 @meta-color: #373b46;				      // Meta info text color
 @post-text-color: #4e505a;        // Unclear why this is different from body font
 @text-color-footer: #b4b4b4;
-@text-color-light: #a7aeb9;		   	// Light text color
 @border-color: #ebebeb;
 @text-post-header: #20809c;
+
+@text-color-light: #494e59;
+@header-color: #4e576a;
+@light-header-color: #5d6b7b;
+@body-color: #4f5d6d;
+
+@secondary-font-color: #5a606d;
 
 @base-url: 'https://hackersandslackers.com/';
 @assets: '../../assets/';
