--- a/src/less/posts/kg.less
+++ b/src/less/posts/kg.less
@@ -119,7 +119,7 @@
                 line-height: 1.2;
                 font-size: 1.1em;
                 color: @header-color;
-                font-family: @header-font-secondary;
+                font-family: @sub-header-font;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 display: -webkit-box;
@@ -132,7 +132,7 @@
                 font-size: 0.9em;
                 line-height: 1.4;
                 max-width: 475px;
-                font-family: @body-font-book;
+                font-family: @body-font;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
                 display: -webkit-box;
