--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -9,12 +9,12 @@
 		<div class="details">
 			<a href="{{url}}" class="author-name">{{name}}</a>
 			<div class="meta">
-				<span class="post-count"><i class="far d fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
+				<span class="post-count"><i class="fas fa-pencil"></i><a href="{{url}}">{{#get "posts" include="count.posts"}}{{plural count.posts empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</a></span>
 				{{#if location}}
-					<span class="meta-item location"><i class="far d fa-home"></i><span class="copy">{{location}}</span></span>
+					<span class="meta-item location"><i class="fas fa-home"></i><span class="copy">{{location}}</span></span>
 				{{/if}}
 				{{#if website}}
-					<span class="meta-item website"><a href="{{website}}" targer="_BLANK"><i class="far d fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
+					<span class="meta-item website"><a href="{{website}}" targer="_BLANK"><i class="fas fa-globe"></i><span class="copy">{{t "Website"}}</a></span></span>
 				{{/if}}
 				{{#if twitter}}
 					<span class="meta-item twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i><span class="copy">{{twitter}}</a></span></span>
