--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -2,7 +2,7 @@
 {{#tag}}
 	<div class="cover">
 		<h1 class="tag-name">
-			<i class="far d fa-tag"></i> <span>{{name}}</span>
+			<i class="fas fa-tag"></i> <span>{{name}}</span>
 			</h3>
 			<div class="post-count">
 				{{plural pagination.total empty=(t "No posts") singular=(t "1 Post") plural=(t "% Posts")}}
