--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -26,7 +26,7 @@
         </a>
       {{/primary_author}}
       <span class="date meta-item">
-        <i class="far d fa-calendar"></i>
+        <i class="fas fa-calendar"></i>
         <span>{{date format="MMM DD"}}</span>
       </span>
     </div>
