--- a/src/less/global/widgets/social-widget.less
+++ b/src/less/global/widgets/social-widget.less
@@ -2,7 +2,7 @@
   .social-btns {
     padding: 0;
     display: flex;
-    margin: 15px 0 0;
+    margin: 0;
     justify-content: space-between;
 
     .btn {
@@ -24,7 +24,7 @@
     .fab,
     i {
       margin: 0 !important;
-      font-size: 1.3em;
+      font-size: 1.5em;
     }
     @media (max-width: 1000px) {
       a {
