--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -32,47 +32,43 @@
 		}
 	}
 
-	.post-head {
-		margin: 0 0 30px;
-
-		.post-title {
-			font-size: 2em;
-			Line-height: 1.1;
-			font-family: @body-font;
-			margin: 0;
-			@media(max-width: @mobile-breakpoint) {
-				font-size: 1.7em;
-			}
-
-			a {
-				color: @h1-color;
-				transition: @transition;
-
-				&:hover {
-					color: @hover-color;
-				}
-			}
+	.post-title {
+		font-size: 2em;
+		Line-height: 1.1;
+		font-family: @body-font;
+		margin: 0;
+		@media(max-width: @mobile-breakpoint) {
+			font-size: 1.7em;
 		}
 
-		.post-excerpt {
-			margin: 5px auto 0;
-			line-height: 1.2;
-			font-family: @body-font;
-			transition: @transition;
+		a {
 			color: @h1-color;
-			font-size: 1.2em;
-			-webkit-line-clamp: 3;
-			-webkit-box-orient: vertical;
-			overflow: hidden;
-			display: -webkit-box;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			width: -webkit-fill-available;
-			@media(max-width: @mobile-breakpoint) {
-				margin: 5px auto 0;
-				-webkit-line-clamp: 2;
-				font-size: 1.1em;
+			transition: @transition;
+
+			&:hover {
+				color: @hover-color;
 			}
+		}
+	}
+
+	.post-excerpt {
+		margin: 5px auto 15px;
+		line-height: 1.2;
+		font-family: @body-font;
+		transition: @transition;
+		color: @h1-color;
+		font-size: 1.2em;
+		-webkit-line-clamp: 3;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		display: -webkit-box;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: -webkit-fill-available;
+		@media(max-width: @mobile-breakpoint) {
+			margin: 5px auto 0;
+			-webkit-line-clamp: 2;
+			font-size: 1.1em;
 		}
 	}
 
