free google fonts, post card styles

--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -48,9 +48,9 @@
 @mobile-breakpoint: 600px;
 
 // Font Styles
-@body-font: 'proxima-nova', sans-serif;
-@header-font: 'canada-type-gibson', sans-serif;
-@sub-header-font: 'canada-type-gibson', sans-serif;
+@body-font: 'Open Sans', sans-serif;
+@header-font: 'Montserrat', sans-serif;
+@sub-header-font: 'Montserrat', sans-serif;
 
 @box-shadow: 0 1px 4px rgba(39,44,49,.15);
 
