--- a/default.hbs
+++ b/default.hbs
@@ -6,12 +6,12 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	{{! Page Meta }}
-	<title>{{meta_title}} | Data Science & Engineering</title>
+	<title>{{meta_title}}</title>
 	<meta name="HandheldFriendly" content="True" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	<meta name="theme-color" content="#5eb9d7" />
 	<link rel="shortcut icon" href="{{@site.icon}}" />
-	<link rel="stylesheet" href="https://use.typekit.net/dxd2utp.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans:400,600&display=swap" rel="stylesheet">
 	{{^is "post"}}
 		<meta property="og:image" content="{{img_url @site.cover_image}}" />
 		<meta name="twitter:card" content="summary_large_image" />
