--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -33,10 +33,10 @@
 	}
 
 	.post-title {
-		Line-height: 1.1;
-		margin: 0;
-		font-family: @body-font;
+		margin: 0 0 20px 0;
+		font-family: @header-font;
 		font-size: 2em;
+		line-height: 1.1;
 		@media(max-width: @mobile-breakpoint) {
 			font-size: 1.7em;
 		}
@@ -56,13 +56,13 @@
 		-webkit-box-orient: vertical;
 		display: -webkit-box;
 		width: -webkit-fill-available;
-		margin: 5px auto 15px;
+		margin: 5px auto 20px;
 		overflow: hidden;
 		overflow: hidden;
 		color: @h1-color;
 		font-family: @body-font;
-		font-size: 1.2em;
-		line-height: 1.2;
+		font-size: 1.1em;
+    line-height: 1.3;
 		text-overflow: ellipsis;
 		transition: @transition;
 		@media(max-width: @mobile-breakpoint) {
@@ -128,7 +128,8 @@
 			}
 
 			a {
-				color: #5b6374;
+				font-size: 1.1em;
+				font-weight: 600;
 				transition: @transition;
 
 				&:hover {
