--- a/src/less/global/widgets/newsletter-widget.less
+++ b/src/less/global/widgets/newsletter-widget.less
@@ -4,33 +4,32 @@
     padding-top: 0 !important;
   }
 
-  .newsletter-form {
+  form {
     width: -webkit-fill-available;
     width: -moz-fill-available;
 
-    input[type="text"],
-    input[type="email"] {
-      border: 1px solid #d5dbe6 !important;
+    .subscribe-email {
       width: -webkit-fill-available;
       width: -moz-fill-available;
+      margin-bottom: 10px;
       padding: 14px 15px;
+      border: 1px solid #d5dbe6 !important;
+
+      border: 1px solid #d5dbe6;
+      border-radius: 3px;
       background: #fff;
       font-size: 13px;
       letter-spacing: 1px;
-      
-      border: 1px solid #d5dbe6;
       transition: all 0.3s all;
-      margin-bottom: 10px;
-      border-radius: 3px;
 
       &::placeholder {
-        opacity: 1;
         color: #828294;
+        opacity: 1;
       }
 
       &:hover {
-        background: rgba(64, 206, 199, 0.16) !important;
         border-color: #82d3d0 !important;
+        background: rgba(64, 206, 199, 0.16) !important;
         cursor: text !important;
 
         &::placeholder {
@@ -43,35 +42,35 @@
       }
     }
 
-    input[type=email] {
+    .subscribe-email {
       &:after {
-        content: '\f0e0';
-        font-family: "Font Awesome 5 Pro";
-        font-weight: 100;
-        display: inline-block;
-        font-style: normal;
         -webkit-font-feature-settings: normal;
-        font-feature-settings: normal;
-        font-variant: normal;
-        text-rendering: auto;
         -webkit-font-smoothing: antialiased;
-        right: 17px;
-        top: 23px;
+        display: inline-block;
         position: absolute;
+        top: 23px;
+        right: 17px;
         color: #9aa1bd;
+        font-family: "Font Awesome 5 Pro";
+        font-feature-settings: normal;
         font-size: 1.1em;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 100;
+        text-rendering: auto;
+        content: '\f0e0';
       }
     }
 
     input[name=name] {
       &::placeholder {
-        opacity: 0.8;
         color: #828294;
+        opacity: 0.8;
       }
 
       &:hover {
-        background: rgba(64, 206, 199, 0.16) !important;
         border-color: #82d3d0 !important;
+        background: rgba(64, 206, 199, 0.16) !important;
         cursor: text !important;
 
         &::placeholder {
@@ -84,37 +83,37 @@
       }
 
       &:after {
-        content: '\f0e0';
-        font-family: "Font Awesome 5 Pro";
-        font-weight: 100;
-        display: inline-block;
-        font-style: normal;
         -webkit-font-feature-settings: normal;
-        font-feature-settings: normal;
-        font-variant: normal;
-        text-rendering: auto;
         -webkit-font-smoothing: antialiased;
-        right: 17px;
-        top: 11px;
+        display: inline-block;
         position: absolute;
+        top: 11px;
+        right: 17px;
         color: #9aa1bd;
+        font-family: "Font Awesome 5 Pro";
+        font-feature-settings: normal;
         font-size: 1.1em;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 100;
+        text-rendering: auto;
+        content: '\f0e0';
       }
     }
 
     button {
       width: -webkit-fill-available !important;
       width: -moz-available !important;
-      background: @button-color;
-      padding: 13px 20px;
-      font-size: 16px;
-      color: white;
-      border: 0;
-      text-transform: Uppercase;
-      outline: none;
-      transition: all 0.3s ease-in-out;
       margin-top: 3px;
+      padding: 13px 20px;
+      border: 0;
       border-radius: 3px;
+      outline: none;
+      background: @button-color;
+      color: white;
+      font-size: 16px;
+      text-transform: Uppercase;
+      transition: all 0.3s ease-in-out;
 
       span {
         font-size: 14px;
@@ -130,15 +129,19 @@
 
   .newsletter-description {
     margin: 15px 0;
+    font-family: @body-font;
     font-size: 0.9em;
     line-height: 1.5;
-    font-family: @body-font;
-    
   }
 
   .country {
-    opacity: 0;
-    overflow: hidden;
     height: 0;
+    overflow: hidden;
+    opacity: 0;
+  }
+
+  .message-success,
+  .message-error {
+    display: none;
   }
 }
