--- a/src/less/global/widgets/newsletter-widget.less
+++ b/src/less/global/widgets/newsletter-widget.less
@@ -6,15 +6,14 @@
 
   form {
     width: -webkit-fill-available;
-    width: -moz-fill-available;
+    width: moz-available;
 
     .subscribe-email {
       width: -webkit-fill-available;
-      width: -moz-fill-available;
+      width: moz-available;
       margin-bottom: 10px;
       padding: 14px 15px;
       border: 1px solid #d5dbe6 !important;
-
       border: 1px solid #d5dbe6;
       border-radius: 3px;
       background: #fff;
