--- a/src/less/posts/kg.less
+++ b/src/less/posts/kg.less
@@ -82,7 +82,7 @@
   }
 
 .kg-bookmark-card {
-    margin-bottom: 30px;
+    margin: 0 0 30px 0;
     transition: @transition;
     box-shadow: 0 1px 4px rgba(39, 44, 49, 0.07);
 
@@ -238,9 +238,7 @@
     }
 
     figcaption {
-        width: -webkit-fill-available;
-        width: -moz-available;
-        width: -moz-available;
+        width: fit-content;
         margin: 0 auto;
         padding: 8px;
         color: #8c939f;
@@ -248,6 +246,7 @@
         text-align: center;
         white-space: normal;
         line-height: 1.2;
+        
         @media(max-width: @mobile-breakpoint) {
             display: block;
             width: auto !important;
