--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -50,14 +50,13 @@
 	}
 
 	.avatar-link {
-		margin-bottom: 15px;
 		display: inline-block;
 		position: absolute;
 		left: auto;
 		right: 20px;
 		width: 85px;
 		height: 83px;
-		margin: auto;
+		margin: 0 auto 15px;
 		top: 92px;
 		border: 3px solid white;
 		box-shadow: 1px 1px 0 rgba(20, 24, 53, 0.15);
@@ -94,7 +93,6 @@
 		float: left !important;
 		margin: 10px auto !important;
 		max-width: 450px;
-		text-align: center;
 		text-align: left;
 		min-height: 70px;
 	}
