--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -145,18 +145,18 @@ textarea {
 		border: 1px solid @theme-color;
 		outline: none;
 	}
-}
 
-::-moz-selection {
-	color: white;
-	background: @theme-color;
-	text-shadow: none;
-}
+	&::-moz-selection {
+    	color: white;
+    	background: @theme-color;
+    	text-shadow: none;
+    }
 
-::selection {
-	color: white;
-	background: @theme-color;
-	text-shadow: none;
+    &::selection {
+    	color: white;
+    	background: @theme-color;
+    	text-shadow: none;
+    }
 }
 
 a:hover {
