--- a/post.hbs
+++ b/post.hbs
@@ -9,10 +9,10 @@
 			{{/if}}
 			<div class="post-header">
 				<div class="post-meta">
-					{{#primary_tag}} <span class="primary-tag meta-item"><i class="fas fa-tag"></i> {{name}}</span> {{/primary_tag}}
-					{{#primary_author}} <a href="{{url}}" class="meta-item author desktop"><i class="fas fa-user-edit"></i> {{name}}</a> {{/primary_author}}
-					<span class="date meta-item"><i class="fas fa-calendar"></i> {{date format="MMM Do"}}</span>
-					<span class="readtime meta-item"><i class="fas fa-eye"></i> {{reading_time}}</span>
+					{{#primary_tag}} <div class="primary-tag meta-item"><i class="fas fa-tag"></i> <span>{{name}}</span></div> {{/primary_tag}}
+					{{#primary_author}} <a href="{{url}}" class="meta-item author desktop"><div><i class="fas fa-user-edit"></i> <span>{{name}}</span></div></a>{{/primary_author}}
+          <div class="date meta-item"><i class="fas fa-calendar"></i> <span>{{date format="MMM Do"}}</span></div>
+					<div class="readtime meta-item"><i class="fas fa-eye"></i> <span>{{reading_time}}</span></div>
 				</div>
 				<h1 class="post-title">{{{title}}}</h1>
 
