--- a/src/less/global/widgets/newsletter-widget.less
+++ b/src/less/global/widgets/newsletter-widget.less
@@ -18,7 +18,7 @@
 			background: #fff;
 			font-size: 13px;
 			letter-spacing: 1px;
-			transition: all 0.3s all;
+			transition: @transition;
 
 			&::placeholder {
 				color: #a2a5b1;
